// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionPopover submenu left aligned closes the submenu on mouseleave event 1`] = `
.c3 {
  display: inline-block;
  position: relative;
  color: inherit;
  background-color: transparent;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 24px;
  width: 24px;
}

.c3:hover {
  color: inherit;
  background-color: transparent;
}

.c3::before {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-family: CarbonIcons;
  content: "\\e922";
  font-size: 16px;
  font-style: normal;
  font-weight: normal;
  line-height: 16px;
  vertical-align: middle;
  display: block;
}

.c1 {
  visibility: hidden;
  margin: 0;
  padding: 8px 0;
  box-shadow: 0 5px 5px 0 rgba(0,20,29,0.2),0 10px 10px 0 rgba(0,20,29,0.1);
  position: absolute;
  right: 0;
  background-color: #FFFFFF;
  z-index: 2000;
}

.c5.c5 .c2 {
  cursor: pointer;
}

.c6.c6 .c2 {
  cursor: pointer;
}

.c4 {
  padding-right: 8px;
}

.c7.c7 .c2 {
  cursor: not-allowed;
  color: inherit;
}

.c0 {
  cursor: pointer;
  box-sizing: border-box;
  padding: 0 24px;
  position: relative;
  line-height: 40px;
  white-space: nowrap;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  width: 100%;
  color: rgba(0,0,0,0.9);
  font-size: 14px;
  font-weight: 700;
  text-align: left;
}

.c0:focus,
.c0:hover {
  background-color: #F2F5F6;
}

.c0:focus {
  outline: none;
  box-shadow: inset 0px 0px 0px 2px #FFB500;
}

.c0.c0 .c2 {
  cursor: pointer;
}

<div
  aria-controls="ActionPopoverMenu_guid-12345"
  aria-expanded={false}
  aria-haspopup="true"
  aria-label="actions"
  className="c0"
  onClick={[Function]}
  onKeyDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="menuitem"
  tabIndex="0"
  type="button"
>
  <div
    aria-labelledby="ActionPopoverItem_guid-12345"
    className="c1"
    data-component="action-popover"
    data-element="action-popover-submenu"
    id="ActionPopoverMenu_guid-12345"
    onKeyDown={[Function]}
    role="menu"
    style={null}
  >
    <div
      className="c0"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="menuitem"
      tabIndex="0"
      type="button"
    >
      Sub Menu 1
    </div>
  </div>
  <span
    className="c2 c3 c4"
    data-component="icon"
    data-element="message"
    disabled={false}
    fontSize="small"
    type="message"
  />
  Email Invoice
</div>
`;

exports[`ActionPopover submenu left aligned opens the submenu on mouseenter 1`] = `
.c3 {
  display: inline-block;
  position: relative;
  color: inherit;
  background-color: transparent;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 24px;
  width: 24px;
}

.c3:hover {
  color: inherit;
  background-color: transparent;
}

.c3::before {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-family: CarbonIcons;
  content: "\\e922";
  font-size: 16px;
  font-style: normal;
  font-weight: normal;
  line-height: 16px;
  vertical-align: middle;
  display: block;
}

.c1 {
  display: block;
  margin: 0;
  padding: 8px 0;
  box-shadow: 0 5px 5px 0 rgba(0,20,29,0.2),0 10px 10px 0 rgba(0,20,29,0.1);
  position: absolute;
  right: 0;
  background-color: #FFFFFF;
  z-index: 2000;
}

.c5.c5 .c2 {
  cursor: pointer;
}

.c6.c6 .c2 {
  cursor: pointer;
}

.c4 {
  padding-right: 8px;
}

.c7.c7 .c2 {
  cursor: not-allowed;
  color: inherit;
}

.c0 {
  cursor: pointer;
  box-sizing: border-box;
  padding: 0 24px;
  position: relative;
  line-height: 40px;
  white-space: nowrap;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  width: 100%;
  color: rgba(0,0,0,0.9);
  font-size: 14px;
  font-weight: 700;
  text-align: left;
}

.c0:focus,
.c0:hover {
  background-color: #F2F5F6;
}

.c0:focus {
  outline: none;
  box-shadow: inset 0px 0px 0px 2px #FFB500;
}

.c0.c0 .c2 {
  cursor: pointer;
}

<div
  aria-controls="ActionPopoverMenu_guid-12345"
  aria-expanded={true}
  aria-haspopup="true"
  aria-label="actions"
  className="c0"
  onClick={[Function]}
  onKeyDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="menuitem"
  tabIndex="0"
  type="button"
>
  <div
    aria-labelledby="ActionPopoverItem_guid-12345"
    className="c1"
    data-component="action-popover"
    data-element="action-popover-submenu"
    id="ActionPopoverMenu_guid-12345"
    onKeyDown={[Function]}
    role="menu"
    style={null}
  >
    <div
      className="c0"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="menuitem"
      tabIndex="0"
      type="button"
    >
      Sub Menu 1
    </div>
  </div>
  <span
    className="c2 c3 c4"
    data-component="icon"
    data-element="message"
    disabled={false}
    fontSize="small"
    type="message"
  />
  Email Invoice
</div>
`;
